--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/github1293715794/nodeapi/issues"
   },
-  "homepage": "https://github.com/github1293715794/nodeapi#readme"
+  "homepage": "https://github.com/github1293715794/nodeapi#readme",
+  "devDependencies": {
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
+  }
 }
